// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListenTemplate it should render with only a file 1`] = `
MediaWikiTemplate {
  "children": undefined,
  "name": "Listen",
  "params": Array [
    Object {
      "key": "filename",
      "value": "test.mp3",
    },
  ],
}
`;

exports[`ListenTemplate it should render with options: {"align":"left","title":"test title"} 1`] = `
MediaWikiTemplate {
  "children": undefined,
  "name": "Listen",
  "params": Array [
    Object {
      "key": "filename",
      "value": "test.mp3",
    },
    Object {
      "key": "align",
      "value": "left",
    },
    Object {
      "key": "title",
      "value": "test title",
    },
  ],
}
`;

exports[`ListenTemplate it should render with options: {"align":"left"} 1`] = `
MediaWikiTemplate {
  "children": undefined,
  "name": "Listen",
  "params": Array [
    Object {
      "key": "filename",
      "value": "test.mp3",
    },
    Object {
      "key": "align",
      "value": "left",
    },
  ],
}
`;

exports[`ListenTemplate it should render with options: {"title":"test title"} 1`] = `
MediaWikiTemplate {
  "children": undefined,
  "name": "Listen",
  "params": Array [
    Object {
      "key": "filename",
      "value": "test.mp3",
    },
    Object {
      "key": "title",
      "value": "test title",
    },
  ],
}
`;
